# hyperspell-client

./: .gitignore  LICENSE  README.md  RELEASE.md  package-lock.json  package.json
.github/workflows/: check.yml  release.yml
scripts/: fetch-runtime.sh
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/runtime/: .gitkeep
src-tauri/src/: actions_log.rs  auth.rs  bootstrap.rs  config.rs  daemon_paths.rs  ipc.rs  lib.rs  main.rs  permissions.rs  supervisor.rs  uninstall.rs
